<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:gravity="center_horizontal"
    android:background="@color/Magnolia">

    <!-- Greeting Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_heading"
        android:paddingBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_title"
        android:paddingBottom="16dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="2"
        android:paddingVertical="8dp"
        android:orientation="horizontal">

        <!-- First Row of Images -->
        <Button
            android:id="@+id/BtnSwimmingActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/swimming_activity"
            android:textSize="32sp"
            android:background="@color/Magnolia"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/swimming_desc" />

        <Button
            android:id="@+id/BtnRunningActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/running_activity"
            android:textSize="32sp"
            android:background="@color/Magnolia"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/running_desc" />

        <Button
            android:id="@+id/BtnTennisActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/tennis_activity"
            android:textSize="32sp"
            android:background="@color/Magnolia"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/tennis_desc" />

        <Button
            android:id="@+id/BtnTelevisionActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/television_activity"
            android:textSize="32sp"
            android:background="@color/Magnolia"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/television_desc" />

        <Button
            android:id="@+id/BtnSleepingActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/sleeping_activity"
            android:textSize="32sp"
            android:background="@color/Magnolia"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/sleeping_desc" />

        <!-- Second Row of Images -->
        <Button
            android:id="@+id/BtnSkateboardActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/skateboard_activity"
            android:textSize="32sp"
            android:background="@color/Magnolia"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/skateboard_desc" />

        <Button
            android:id="@+id/BtnHockeyActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/hockey_activity"
            android:textSize="32sp"
            android:background="@color/Magnolia"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/hockey_desc" />

        <Button
            android:id="@+id/BtnSoccerActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/soccer_activity"
            android:textSize="32sp"
            android:background="@color/Magnolia"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/soccer_desc" />

        <Button
            android:id="@+id/BtnRugbyActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/rugby_activity"
            android:textSize="32sp"
            android:background="@color/Magnolia"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/rugby_desc" />

        <Button
            android:id="@+id/BtnCricketActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/cricket_activity"
            android:textSize="32sp"
            android:background="@color/Magnolia"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cricket_desc" />

    </GridLayout>

    <!-- Text Field for Journal Entry -->
    <EditText
        android:id="@+id/activityEntryEditText"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_enter_text"
        android:gravity="start"
        android:padding="16dp"
        android:inputType="textMultiLine"
        android:background="@drawable/multiline_edittext_background"
        android:maxLines="8"/>

    <Button
        android:id="@+id/BtnSaveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_save_activity"
        android:padding="8dp"
        android:textSize="20sp"
        android:background="@color/TropicalIndigo"
        android:textColor="@color/Magnolia"/>

    <Button
        android:id="@+id/BtnRedirectToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_journal_entry"
        android:padding="8dp"
        android:textSize="20sp"
        android:background="@color/TropicalIndigo"
        android:textColor="@color/Magnolia"/>

</LinearLayout>