<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/Magnolia">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_settings_heading"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginVertical="12dp"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/placeholder_wireframe"
        android:contentDescription="@string/content_desc_pfp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/settingsUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_username"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/settingsEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_email"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/button_edit_profile"
        android:textSize="20sp"
        android:textColor="@color/Magnolia" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/FloralLavender"
        android:layout_marginVertical="12dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_notifications"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textColor="@color/Magnolia" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_privacy"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textColor="@color/Magnolia" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_logout"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textColor="@color/Magnolia" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_account"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textColor="@color/Magnolia" />
</LinearLayout>

