<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".RegisterActivity"
    android:background="@color/Magnolia">

    <ImageView
        android:id="@+id/RegisterLogo"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:src="@drawable/tracker"
        android:contentDescription="@string/content_desc_logo"/>

    <TextView
        android:id="@+id/RegisterStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_app_start"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/RegisterHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/heading_register"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/UsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:padding="12dp"
        android:textSize="20sp"
        android:hint="@string/hint_name"
        android:autofillHints="false"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext_background"
        android:layout_marginHorizontal="24dp"
        android:inputType="text"
        android:drawableStart="@drawable/username_icon"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/PhoneNumberRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="20sp"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:autofillHints="false"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext_background"
        android:drawableStart="@drawable/phone_icon"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/EmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="20sp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:autofillHints="false"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext_background"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/PasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="20sp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="false"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext_background"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="8dp" />

    <EditText
        android:id="@+id/ConfirmRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="20sp"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:autofillHints="false"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext_background"
        android:drawableStart="@drawable/confirm_icon"
        android:drawablePadding="8dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_register"
        android:textSize="24sp"
        android:layout_marginHorizontal="40dp"
        android:background="@color/TropicalIndigo"
        android:textColor="@color/Magnolia"  />

    <TextView
        android:id="@+id/RedirectToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_already_member"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/black"/>
</LinearLayout>
