<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="4dp"
    android:layout_marginVertical="8dp"
    android:background="@color/Periwinkle"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/currentMood"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="4dp"
            android:layout_weight="1"
            android:src="@drawable/happy"
            android:background="@color/Periwinkle"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_logo"/>

        <TextView
            android:id="@+id/currentDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_date"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnCurrentViewJournal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_view_journal"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:paddingVertical="16dp"
        android:textColor="@color/Magnolia"/>

    <Button
        android:id="@+id/btnCurrentViewActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingVertical="24dp"
        android:text="@string/button_view_activity"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textColor="@color/Magnolia"/>
</LinearLayout>
