<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:gravity="center_horizontal"
    android:background="@color/Magnolia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/MoodOfTheDay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/joyful"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/text_joyful" />

        <TextView
            android:id="@+id/DateOfTheDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date"
            android:textAlignment="center"
            android:paddingBottom="8dp"
            android:textColor="@color/black"
            android:textSize="32sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/JournalEntryTextOnly"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_enter_text"
        android:gravity="start"
        android:padding="16dp"
        android:background="@color/Periwinkle" />

</LinearLayout>