<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/Magnolia">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_journal_heading"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/BtnRedirectToEditEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_add_journal"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textColor="@color/Magnolia"/>

        <Button
            android:id="@+id/BtnRedirectToEditActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_add_activity"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textColor="@color/Magnolia"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="12dp"
        android:background="@color/FloralLavender" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_prev_heading"
        android:paddingVertical="8dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="vertical"-->
    <!--        android:paddingTop="16dp">-->

    <!--    <include layout="@layout/item_prev_journal_entry"/>-->
    <!--    <include layout="@layout/item_prev_journal_entry"/>-->
    <!--    <include layout="@layout/item_prev_journal_entry"/>-->

    <!--    </LinearLayout>-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/JournalRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"/>
    </LinearLayout>

</LinearLayout>
